RESOLVED FIXED235331
REGRESSION (r264352): Mail compose body field does not avoid the keyboard when scrolling after focus
https://bugs.webkit.org/show_bug.cgi?id=235331
Summary REGRESSION (r264352): Mail compose body field does not avoid the keyboard whe...
Wenson Hsieh
Reported 2022-01-18 13:53:49 PST
Attachments
For EWS (22.35 KB, patch)
2022-01-18 14:50 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2022-01-18 14:50:06 PST
Wenson Hsieh
Comment 2 2022-01-18 18:33:43 PST
Comment on attachment 449429 [details] For EWS Thanks for the review!
EWS
Comment 3 2022-01-18 19:12:12 PST
Committed r288178 (246159@main): <https://commits.webkit.org/246159@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449429 [details].
Note You need to log in before you can comment on or make changes to this bug.