Tools/WebKitTestRunner/ios/UIScriptControllerIOS.h
@@ -146,6 +146,7 @@ private:
     void copyText(JSStringRef) override;
     void installTapGestureOnWindow(JSValueRef) override;
     void setSpellCheckerResults(JSValueRef) override { }
+    void setScrollViewKeyboardAvoidanceEnabled(bool) override;
 
     bool mayContainEditableElementsInRect(unsigned x, unsigned y, unsigned width, unsigned height) override;
 
